[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/chessBoard.gd" type="Script" id=2]
[ext_resource path="res://resources/particlesSprites/smoke_01.png" type="Texture" id=3]
[ext_resource path="res://scenes/moveDrawFx.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.609428, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.83125, 0.390909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.53613, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
angle = 180.0
angle_random = 1.0
scale = 0.03
scale_random = 0.02
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Environment" id=7]
background_mode = 4
glow_enabled = true

[node name="rootDebug" type="Node"]

[node name="root2d" type="Node2D" parent="."]

[node name="tileMap" type="TileMap" parent="root2d"]
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1
script = ExtResource( 2 )

[node name="twn" type="Tween" parent="root2d/tileMap"]

[node name="twnMove" type="Tween" parent="root2d/tileMap"]

[node name="twnColor" type="Tween" parent="root2d/tileMap"]

[node name="twnDotRadius" type="Tween" parent="root2d/tileMap"]

[node name="king" type="Sprite" parent="root2d/tileMap" groups=[
"King",
]]
visible = false
modulate = Color( 0.952941, 0, 0, 1 )
position = Vector2( 96, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = -10
texture = ExtResource( 1 )
centered = false

[node name="twnDead" type="Tween" parent="root2d/tileMap/king"]

[node name="spikes" type="Sprite" parent="root2d/tileMap" groups=[
"Spikes",
]]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 128, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = -10
texture = ExtResource( 1 )
centered = false

[node name="player" type="Sprite" parent="root2d/tileMap" groups=[
"Player",
]]
position = Vector2( 96, 128 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )
centered = false

[node name="particles2D" type="Particles2D" parent="root2d/tileMap/player"]
position = Vector2( 32, 32 )
z_index = -1
emitting = false
amount = 100
speed_scale = 0.6
local_coords = false
draw_order = 1
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="tower" type="Sprite" parent="root2d/tileMap" groups=[
"Tower",
]]
visible = false
modulate = Color( 0.376471, 0.87451, 0, 1 )
position = Vector2( 32, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )
centered = false

[node name="bishop" type="Sprite" parent="root2d/tileMap" groups=[
"Bishop",
]]
visible = false
modulate = Color( 0.498039, 0, 0.87451, 1 )
position = Vector2( 192, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )
centered = false

[node name="queen" type="Sprite" parent="root2d/tileMap" groups=[
"Queen",
]]
visible = false
modulate = Color( 1, 0.984314, 0, 1 )
position = Vector2( 64, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )
centered = false

[node name="moveDrawFx" parent="root2d/tileMap" instance=ExtResource( 4 )]

[node name="worldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )
